--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^1.4.5",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "form-data": "^4.0.0"
   }
